# genanki

./: .pdm-python  pyproject.toml
genanki/: builtin_models.py  card.py  deck.py  model.py  note.py  package.py  util.py
tests/: test_builtin_models.py  test_cloze.py  test_genanki.py  test_note.py
