[project]
name = "genanki"
version = "0.13.1"
description = "Generate Anki decks programmatically"
authors = [
    { name = "Arthur", email = "arthur@chunai.dev" },
    { name = "Kerrick Staley", email = "k@kerrickstaley.com" },
]
dependencies = [
    "setuptools>=72.2.0",
    "cached-property",
    "chevron",
    "frozendict",
    "pyyaml",
    "pytest>=8.3.2",
    "anki>=24.6.3",
    "aqt>=24.6.3",
    "PyQt6>=6.7.1",
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }
keywords = ["anki", "flashcards", "memorization"]
[project.urls]
Homepage = "http://github.com/kerrickstaley/genanki"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
